[package]
name = "mieszkania-olx"
version = "0.1.0"
authors = ["Przemyslaw Majocha <przemyslaw.majocha@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

xml-rs = "0.8"
reqwest = { version = "0.10.8", features = ["blocking"] }
timer = "0.1.3"
chrono = "0.4.19"